force-app/main/default/objects/Client_Environment__c/Client_Environment__c.object-meta.xml
<CustomObject>
    <label>Client Environment</label>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>