force-app/main/default/objects/Client_Environment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Environments</relationshipLabel>
    <relationshipName>Client_Environments</relationshipName>
</CustomField>