force-app/main/default/objects/Client_Environment__c/fields/Authentication_Method__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Method__c</fullName>
    <label>Authentication Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>MFA</fullName>
            </value>
            <value>
                <fullName>Local Auth</fullName>
            </value>
            <value>
                <fullName>API Key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>