force-app/main/default/objects/Client_Environment__c/fields/Data_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Data_Sensitivity__c</fullName>
    <label>Data Sensitivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Regulated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>