force-app/main/default/objects/Client_Environment__c/fields/Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Owner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Environments</relationshipLabel>
    <relationshipName>Client_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>