force-app/main/default/objects/Client_Environment__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Text</type>
    <length>255</length>
</CustomField>